# thought-bank

./: .gitignore  EXPERIMENTS.md  FINDINGS.md  HMR.py  LICENSE  MODEL_CARD.md  README.md  requirements.txt  setup_environment.sh
configs/: ar_sft_example.yaml
deepseek_v4_mini/: README.md  __init__.py  attention.py  bank_viz.py  cascade.py  chat_cli.py  chat_defer_data.py  chat_mix.py  code_data.py  code_defer_depthcurve.py  code_defer_native.py  code_defer_sample.py  code_defer_sample_deep.py  code_exec_data.py  code_train.py  config.py  delta_channel.py  eval_memory.py  exec_sandbox.py  math_school_data.py  memory.py  mhc.py  model.py  moe.py  nan_repro.py  persona_chat_data.py  rl_defer_grpo.py  rl_defer_grpo_lives.py  rl_disagg.py  rl_lives.py  rl_rewards.py  sft_train.py  smollm_graft.py  sota_session_data.py  tool_env_data.py  train.py  verbal_tasks.py  vram_smoke_350m.py
deepseek_v4_mini/analysis/: README.md  affine_per_unit.py  canonical_ident.py  (+18 more)
diffusion_thought_tensor/: train_sft_ar.py
docs/: ar_thought_model.md
paper/: draft.md  outline.md
repro/: README.md  run_all.sh
scripts/: make_variant.py  pod_boot_sif_repass.sh  pod_run.sh
thought_lm_minimal/: .gitignore  README.md  pyproject.toml  requirements.txt
thought_lm_minimal/configs/: default.yaml
thought_lm_minimal/scripts/: run_train.sh
thought_lm_minimal/thought_lm/: __init__.py  config.py  conv_hf.py  data.py  memory_bench.py  model.py  tokenization.py  tokenizer.py  train.py  train_conv.py  train_mc.py
vast/: README.md  bringup_350m.sh  hf_sync.py  run_350m.sh  sweep_350m.sh
(+182 files in other folders)
