[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_optional = true
plugins = []

[project]
name = "thought_lm_minimal"
version = "0.1.0"
description = "Minimal AR LM with external thought memory"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "pyyaml>=6.0",
  "tensorboard>=2.13",
  "datasets>=2.19",
  "transformers>=4.41",
  "tqdm>=4.66",
]

